--- a/package.json
+++ b/package.json
@@ -49,21 +49,28 @@
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cobe": "^0.6.5",
     "drizzle-orm": "^0.45.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "grab-api.js": "^0.9.131",
     "gsap": "^3.14.2",
     "hono": "^4.11.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "posthog-js": "^1.310.1",
     "posthog-node": "^5.18.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.69.0",
+    "sonner": "^2.0.7",
     "swagger-ui-react": "^5.31.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251225.0",
