--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
     "drizzle-orm": "^0.45.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "grab-api.js": "^0.9.131",
     "gsap": "^3.14.2",
